# FineMote

./: .gitignore  .gitmodules  CMakeLists.txt
Algorithms/Control/: ControlBase.hpp  PID.hpp
Algorithms/Verification/: CRC.cpp  CRC.h
BSP/MC_Board/: .cproject  .mxproject  .project  CMakeLists.txt  MC_Board.cpp  MC_Board.h  MC_Board.ioc  ProjectConfig.h  STM32F446RCTX_FLASH.ld  STM32F446RCTX_RAM.ld  Semihost.c
BSP/MC_Board/Core/Inc/: FreeRTOSConfig.h  MicroROS.hpp  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
BSP/MC_Board/Core/MicroROS_Src/: MicroROSTask.cpp  microros_allocators.c  microros_time.c
BSP/MC_Board/Core/Src/: can.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
BSP/MC_Board/FineMote_BSP/: BSP_CAN.cpp  BSP_CAN.h  BSP_DSHOT.h  BSP_PWM.h  BSP_UART.h
BSP/MC_Board/MDK-ARM/: MC_Board.uvoptx  MC_Board.uvprojx  startup_stm32f446xx.s
BSP/MC_Board/MDK-ARM/MC_Board/: MC_Board.sct
BSP/Robomaster_A/: .cproject  .mxproject  Board.h  CMakeLists.txt  Robomaster_A.cpp  Robomaster_A.h  Robomaster_A.ioc  STM32F427IIHX_FLASH.ld  STM32F427IIHX_RAM.ld
BSP/Robomaster_A/Core/Inc/: main.h  stm32f4xx_it.h  tim.h  usart.h
BSP/Robomaster_A/Core/Src/: adc.c  can.c  dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
BSP/Robomaster_A/FineMote_BSP/: BSP_DSHOT.cpp  BSP_DSHOT.h  BSP_PWM.h  BSP_RS485.h  BSP_SPI.cpp  BSP_SPI.h  BSP_UART.h
BSP/Robomaster_A/MDK-ARM/: Robomaster_A.uvoptx  Robomaster_A.uvprojx  startup_stm32f427xx.s
BSP/Robomaster_C/: .mxproject  CMakeLists.txt  Robomaster.cpp  Robomaster_C.cpp  Robomaster_C.h  Robomaster_C.ioc
BSP/Robomaster_C/Core/Inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
BSP/Robomaster_C/Core/MicroROS_Src/: MicroROSTask.c  it_transport.c  syscalls_stubs.c
BSP/Robomaster_C/Core/Src/: dma.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c
BSP/Robomaster_C/FineMote_BSP/: BSP_PWM.cpp  BSP_PWM.h  BSP_UART.cpp
BSP/Robomaster_C/FineMote_BSP/BSP/: BSP_UART.cpp
BSP/Robomaster_C/MDK-ARM/: Robomaster_C.uvoptx  Robomaster_C.uvprojx  startup_stm32f407xx.s
BSP/Robomaster_C/MDK-ARM/Robomaster_C/: Robomaster_C.sct
Bsp/Robomaster_C/MDK-ARM/: Robomaster_C.uvoptx  Robomaster_C.uvprojx
Components/: AirCooler.cpp  AirCooler.h  Chassis.cpp  Chassis.h  Chassis_differential.cpp  Chassis_differential.h  GasSupply.cpp  GasSupply.h  Manipulator.cpp  Manipulator.h  VolMonitor.cpp  VolMonitor.h
Components/Chassis/: ChassisBase.h++  ChassisBase.hpp  POV_Chassis.h++  POV_Chassis.hpp
Devices/: DeviceBase.h  DeviceBase.hpp
Devices/Controllers/: RadioMaster_Zorro.h
Devices/Encoders/: D28_485.h  D28_5_485.cpp  D28_5_485.h  EncoderBase.cpp  EncoderBase.h
Devices/Motors/: Emm28.h  Emm28.hpp  HO3507.h  HO3507.hpp  M1502E.cpp  M1502E.h  Motor4010.h  Motor4010.hpp  Motor4315.h  Motor4315.hpp  MotorBase.h  MotorBase.hpp  Odrive.h  Odrive.hpp  Propeller.cpp  Propeller.h  RMD_L_40xx_v3.h  RMD_L_40xx_v3.hpp  Servo.hpp
Devices/Motors/dji_motors/: M3508_temp.cpp  M3508_temp.h  dji_group_agent.cpp  dji_group_agent.h
Devices/RS485Dev/: RS485Dev.hpp  RS485Dev_DigitalSwitch.hpp  RS485Dev_EnvMonitor.hpp  RS485Dev_IntMonitor_4p.hpp  RS485Dev_Monitor.hpp  RS485Dev_PWMActor.hpp  RS485Dev_PWMBlower.hpp  RS485Dev_PWMFan.hpp  RS485Dev_PWMPump.hpp  RS485Dev_SOCMonitor_1p.hpp  RS485Dev_TempMonitor_8p.hpp  RS485Dev_VolMonitor_4p.hpp
Devices/RemoteControllers/: RadioMaster_Zorro.cpp  RadioMaster_Zorro.h  RemoteControl.h
Devices/Sensors/: BMI088.cpp  BMI088.h  BMI088MiddleWare.cpp  BMI088MiddleWare.h  BMI088reg.h  H30_imu.cpp  H30_imu.h  IMUBase.cpp  IMUBase.h  Sensor.cpp  Sensor.h  TempControl.cpp  task.cpp  task.h
Devices/Thermometers/: DS18B20_485.cpp  DS18B20_485.h
Interface/: Interface.cpp  Interface.h  ProjectConfig.h  Task.cpp  Task.h  Tasks.hpp
Interface/Examples/: TaskBeepMusic.cpp  TaskLED.cpp  TaskPOVChassis.cpp
Interface/UserTasks/: UserTask1.cpp
Services/Bus/: DSHOT.cpp  DSHOT.h  DSHOT.hpp  PWM.h  PWM_Base.hpp  RS485_Base.cpp  RS485_Base.h  RS485_Base.hpp  SPI_Base.hpp  UARTBaseLite.cpp  UARTBaseLite.h  UART_Base.cpp  bsp_spi.hpp
Services/Bus/DataStruct/: DoubleBuff.hpp  FixedSizeMap.hpp  FixedSizeQueue.hpp
Services/FineSerial/: FineSerial.cpp  FineSerial.h
Services/FineWarden/: FZMotion.h  FineSerial.h++  FineSerial.hpp
Services/MultiMedia/: BeepMusic.cpp  BeepMusic.hpp  BeepMusicBasic.h  LED.h  MultiButton.hpp  MusicLibrary.hpp  Music_Astronomia.h  Music_GoodnightMeow.h  Music_IronTorrent.h  Music_LiuSha.h  Music_Senbonzakura.h  Music_SuperMario.h  Music_Windmill.h  Music_YMCA.h
